--- a/app.json
+++ b/app.json
@@ -1,14 +1,23 @@
 {
   "pages": [
-    "pages/index/index",
+    "pages/home/home",
     "pages/monitor/monitor",
-    "pages/my/my"
+    "pages/my/my",
+    "pages/code/code",
+    "pages/vehicle/vehicle",
+    "pages/vehicle/details/details",
+    "pages/vehicle/bind/bind",
+    "pages/vehicle/code/code",
+    "pages/setting/setting",
+    "pages/statics/distance/distance",
+    "pages/statics/fuelConsumption/fuelConsumption",
+    "pages/statics/speed/speed"
   ],
   "window": {
     "navigationBarBackgroundColor": "#1296db",
     "navigationBarTextStyle": "white",
     "navigationBarTitleText": "潍柴车联网",
-    "backgroundColor": "#eeeeee",
+    "backgroundColor": "#f9f9f9",
     "backgroundTextStyle": "light",
     "enablePullDownRefresh": false
   },
@@ -17,5 +26,23 @@
     "scope.userLocation": {
       "desc": "你的位置信息将用于小程序位置接口的效果展示"
     }
+  },
+  "tabBar": {
+    "color": "#8a8a8a",
+    "selectedColor": "#1296db",
+    "list": [
+      {
+        "pagePath": "pages/home/home",
+        "text": "首页",
+        "iconPath": "images/ic_home.png",
+        "selectedIconPath": "images/ic_home_press.png"
+      },
+      {
+        "pagePath": "pages/my/my",
+        "text": "我的",
+        "iconPath": "images/ic_my.png",
+        "selectedIconPath": "images/ic_my_press.png"
+      }
+    ]
   }
 }
